# Proyect3_IABD

./: README.md  app_prediccion.py  dataset_cleaning.py  dataset_entrenamiento_final.csv  dataset_extraction.py  dataset_prueba.py  main.py  meteocat_D5_resumen_historico.csv  modelo.py  modelo_lluvia.py  modelo_temperatura.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ejecucion_diaria.yml
data/: dataset_cleaning.py  dataset_extraction.py  global_feature_engineering.py  scraper_prediccion.py
data/clean_datasets/: clean_meteocat_D5_resumen_historico.csv  clean_meteocat_X4_resumen_historico.csv  clean_meteocat_X8_resumen_historico.csv
data/model_memory/: columnas_modelo_lluvia.pkl
data/raw_datasets/: meteocat_D5_resumen_historico.csv  meteocat_X4_resumen_historico.csv  meteocat_X8_resumen_historico.csv
data/training_datasets/: dataset_entrenamiento_barcelona_MASTER.csv
models/: modelo_lluvia.py  modelo_temperatura.py
ui/: st_interface.py
